# multi-source-candidate-data-transformer

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  candidate.json  check_merge.py  check_project.py  check_transform.py  extract_candidate.py  project_result.json  pyproject.toml  ruff.toml  transform_result.json
.ai/prompts/: 01_Domain_Models.md
.claude/: settings.local.json
.github/workflows/: ci.yml
config/: confidence_rules.yaml  custom_output.yaml  default_output.yaml  merge_policy.yaml  projection_rules.yaml  skill_aliases.yaml  validation_rules.yaml
docs/: 01_Software_Requirements_Analysis.docx  01_Software_Requirements_Analysis.md  02_Research_Document.docx  02_Research_Document.md  03_Technology_Decision_Record.docx  03_Technology_Decision_Record.md  04_High_Level_Design.docx  04_High_Level_Design.md  DEVELOPMENT_RULES.md  api-reference.md  architecture.md  canonical-model.md  cli.md  configuration.md  design-decisions.md  extension-guide.md  index.md  pipeline.md  projection.md
planning/: IMPLEMENTATION_PLAN.md  REVIEW_CHECKLIST.md
samples/expected/: Europass.json  No_Experience.json  Standard_resume.json  canva_resume.json  company_location.json  date_formats.json  degree_alias.json  gpa_resume.json  graceful_degradation.json  sahil_resume.json  same_line_resume.json  school_denylist.json  sherlock_resume.json  two_column.json
samples/inputs/: jane_carter_ats.json  my_test.json  sahil_conflict_ats.json  sahil_minimal_ats.json  sahil_perfect_ats.json
samples/resumes/: Standard_resume.docx  company_location.docx  date_formats.docx  degree_alias.docx  gpa_resume.docx  graceful_degradation.docx  jane_carter_resume.docx  same_line_resume.docx  school_denylist.docx
src/transformer/application/: __init__.py  result.py  service.py
src/transformer/cli/: __init__.py  app.py  error_handler.py
src/transformer/confidence/: __init__.py  aggregator.py  confidence_engine.py  exceptions.py  merge_metadata.py  report.py  strategies.py
src/transformer/config/: config_loader.py  exceptions.py  loader.py  skill_aliases.py
tests/: conftest.py  test_packaging.py
tests/integration/: test_application_service_pipeline.py  test_cli.py  test_confidence_validation_pipeline.py  test_merge_engine.py  test_pipeline_orchestration.py  test_projection_pipeline.py
tests/unit/merge/: _builders.py  (+4 more)
(+106 files in other folders)
