[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "candidate-data-transformer"
version = "0.1.0"
description = "Multi-source candidate data transformer: ATS JSON + Resume PDF → Golden Candidate Record"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
keywords = ["ats", "resume", "candidate", "data-transformer", "talent-intelligence"]

dependencies = [
    "typer>=0.12.0",
    "pydantic>=2.7.0",
    "pymupdf>=1.24.0",
    "pyyaml>=6.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-cov>=5.0.0",
    "mypy>=1.10.0",
    "ruff>=0.4.0",
    "black>=24.4.0",
    "pre-commit>=3.7.0",
    "types-pyyaml>=6.0.12.20240311",
]

[project.scripts]
transformer = "transformer.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/transformer"]

# ---------------------------------------------------------------------------
# pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v --tb=short --strict-markers"
markers = [
    "unit: fast, isolated unit tests",
    "integration: end-to-end pipeline tests",
]

# ---------------------------------------------------------------------------
# Black
# ---------------------------------------------------------------------------
[tool.black]
line-length = 88
target-version = ["py312"]
include = '\.pyi?$'
extend-exclude = '''
/(
  | \.git
  | \.venv
  | __pycache__
)/
'''

# ---------------------------------------------------------------------------
# MyPy
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
strict_optional = true
ignore_missing_imports = true
mypy_path = "src"

[[tool.mypy.overrides]]
module = "fitz.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
